[gd_scene load_steps=2 format=3 uid="uid://jtr136e05oby"]

[ext_resource type="Script" path="res://lib/scenes/enemy_info_dialog.gd" id="1_4cmdh"]

[node name="EnemyInfo" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(400, 300)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4cmdh")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(500, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "XXX"
horizontal_alignment = 1

[node name="LabelXP" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "XP"

[node name="LabelDamage" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "DMG"

[node name="LabelHitPoints" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HP"

[node name="LabelAttackSpeed" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "AS"

[node name="LabelWalkingSpeed" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "WS"

[node name="LabelRunningSpeed" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "RS"

[node name="LabelDetectionDistance" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "DD"

[node name="LabelHearDistance" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HD"
